Kickstart libompfile backend

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -55,6 +55,10 @@ extraSOURCES  += aiori-HDF5.c
 extraLDADD    += -lhdf5 -lz
 endif
 
+if USE_OMPFILE_AIORI
+extraSOURCES += aiori-OMPFile
+endif
+
 if USE_IME_AIORI
 extraSOURCES  += aiori-IME.c
 extraCPPFLAGS += -I/opt/ddn/ime/include
